Update links color (#104)
* Update links color

* chore: auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/src/mkdocs_ansible/assets/stylesheets/ansible.css
+++ b/src/mkdocs_ansible/assets/stylesheets/ansible.css
@@ -1,5 +1,7 @@
-:root {
+:root > * {
   --md-primary-fg-color: #5bbdbf;
+  --md-typeset-a-color: #2980b9; /* See https://github.com/squidfunk/mkdocs-material/issues/1583 */
+  /* --md-text-link-color: #2980b9; */
   /* --md-primary-fg-color--light: #ECB7B7; */
   /* --md-primary-fg-color--dark:  #FF5850; */
 }
